--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "laravel/laravel",
+    "name": "rezaerami/twitter-killswitch-core",
     "type": "project",
-    "description": "The Laravel Framework.",
+    "description": "This is core of twitter killswitch",
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
@@ -10,6 +10,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
+        "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.5"
     },
     "require-dev": {
